补充若干知识点总结